# webgl-vs-webgpu

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/wgsl/: bufferless.vs.wgsl  polygon.wgsl
assets/wgsl/func/: microfacet_lighting.wgsl
assets/wgsl/struct/: scene_uniform.wgsl
docs/: code.md  index.md  webgl.md  webgpu.md
docs/.vitepress/: config.mjs
docs/.vitepress/components/: WebGL.vue  WebGPU.vue
docs/.vitepress/theme/: index.js  index.scss
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
webgl-vs-webgpu/: Cargo.toml  build.rs  index.html  wgsl_preprocess.rs
webgl-vs-webgpu/src/: app.rs  camera.rs  color.rs  lib.rs  main.rs
webgl-vs-webgpu/src/comparative_scenario/: bottle_model.rs  mod.rs  thousands_entity.rs
webgl-vs-webgpu/src/geometries/: bottle.rs  cube.rs  cylinder.rs  mod.rs  sphere.rs
webgl-vs-webgpu/src/node/: compute_node.rs  view_node.rs
webgl-vs-webgpu/src/run/: mod.rs  native.rs  web.rs
webgl-vs-webgpu/src/ui/: control_panel.rs  egui_layer.rs  frame_history.rs  mod.rs
webgl-vs-webgpu/src/util/: load_texture.rs  matrix_helper.rs  mod.rs  shader.rs  vertex.rs
